jenkins-deployment.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkinsd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      serviceAccountName: jenkins
      containers:
      - name: jenkins
        image: jenkins/jenkins:lts
        ports:
        - containerPort: 8080
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
        volumeMounts:
          - name: jenkins-home
            mountPath: /var/jenkins_home
          - name: dockersock
            mountPath: /var/run/docker.sock
          - name: dockerexec
            mountPath: /usr/bin/docker
      volumes:
        - name: jenkins-home
          emptyDir: {}
        - name: dockersock
          hostPath:
            path: /var/run/docker.sock
            type: File
        - name: dockerexec
          hostPath:
            path: /usr/bin/docker
            type: File
